--- a/index.html
+++ b/index.html
@@ -10,32 +10,16 @@
     <h1>Drag & Drop Gallery</h1>
     <div class="gallery">
       <div class="image-box" draggable="true">
-        <img
-          src="images/1.avif"
-          alt="Image 1"
-          width="200" height="200"
-        />
+        <img src="images/1.avif" alt="Image 1" width="200" height="200" />
       </div>
       <div class="image-box" draggable="true">
-        <img
-          src="images/2.avif"
-          alt="Image 2"
-          width="200" height="200"
-        />
+        <img src="images/2.avif" alt="Image 2" width="200" height="200" />
       </div>
       <div class="image-box" draggable="true">
-        <img
-          src="images/3.avif"
-          alt="Image 3"
-          width="200" height="200"
-        />
+        <img src="images/3.avif" alt="Image 3" width="200" height="200" />
       </div>
       <div class="image-box" draggable="true">
-        <img
-          src="images/4.avif"
-          alt="Image 4"
-          width="200" height="200"
-        />
+        <img src="images/4.avif" alt="Image 4" width="200" height="200" />
       </div>
     </div>
 
